--- a/clock.html
+++ b/clock.html
@@ -9,9 +9,9 @@
           href="https://fonts.googleapis.com/css?family=Orbitron">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   </head>
-  <body>
+  <body class="morning evening night" id="body">
 
-  <div id="ending">hello</div>
+  <div id="ending">A Cool Clock</div>
   <div class="container">
     <div id="clock"></div>
   </div>
