background afternoon addition

--- a/clock.html
+++ b/clock.html
@@ -9,7 +9,7 @@
           href="https://fonts.googleapis.com/css?family=Orbitron">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   </head>
-  <body class="morning evening night" id="body">
+  <body class="morning afternoon evening night" id="body">
 
   <div id="ending">A Cool Clock</div>
   <div class="container">
